--- a/src/components/_scopes/form/TextArea/TextArea.module.scss
+++ b/src/components/_scopes/form/TextArea/TextArea.module.scss
@@ -4,7 +4,8 @@
   max-height: 500px;
   margin-top: 0.5rem;
   padding: 0.8rem 0;
-  border: none;
+  border: $border-s;
+  border-color: transparent;
   border-radius: $radius-2;
   color: var(--color-text-2);
   font-weight: 300;
